--- a/sdk/communication/communication-identity/package.json
+++ b/sdk/communication/communication-identity/package.json
@@ -3,13 +3,12 @@
   "version": "1.3.2",
   "description": "SDK for Azure Communication service which facilitates user token administration.",
   "sdk-type": "client",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
-  "types": "types/communication-identity.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:browser": "dev-tool run build-package && dev-tool run bundle",
-    "build:clean": "rush update --recheck && rush rebuild && npm run build",
     "build:node": "dev-tool run build-package && dev-tool run bundle",
     "build:samples": "echo Obsolete.",
     "build:test": "dev-tool run build-package && dev-tool run bundle",
@@ -22,8 +21,8 @@
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "generate:client": "autorest --typescript ./swagger/README.md && rushx format",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
-    "integration-test:browser": "dev-tool run test:browser",
-    "integration-test:node": "dev-tool run test:node-js-input -- --timeout 5000000 --exclude 'dist-esm/test/**/browser/*.spec.js' 'dist-esm/test/**/*.spec.js'",
+    "integration-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "integration-test:node": "dev-tool run test:vitest",
     "lint": "eslint package.json api-extractor.json README.md src test",
     "lint:fix": "eslint package.json api-extractor.json README.md src test --fix --fix-type [problem,suggestion]",
     "pack": "npm pack 2>&1",
@@ -92,15 +91,15 @@
   "sideEffects": false,
   "prettier": "@azure/eslint-plugin-azure-sdk/prettier.json",
   "dependencies": {
-    "@azure/abort-controller": "^2.0.0",
+    "@azure/abort-controller": "^2.1.2",
     "@azure/communication-common": "^2.3.1",
-    "@azure/core-auth": "^1.3.2",
-    "@azure/core-client": "^1.6.0",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-client": "^1.9.2",
     "@azure/core-lro": "^2.2.0",
-    "@azure/core-paging": "^1.1.1",
-    "@azure/core-rest-pipeline": "^1.3.0",
-    "@azure/core-tracing": "^1.0.0",
-    "@azure/logger": "^1.0.0",
+    "@azure/core-paging": "^1.6.2",
+    "@azure/core-rest-pipeline": "^1.18.0",
+    "@azure/core-tracing": "^1.2.0",
+    "@azure/logger": "^1.1.4",
     "events": "^3.0.0",
     "tslib": "^2.2.0"
   },
@@ -111,18 +110,16 @@
     "@azure/core-util": "^1.6.1",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
-    "@azure/identity": "^4.0.1",
-    "@azure/msal-node": "^2.9.2",
+    "@azure/identity": "^4.5.0",
+    "@azure/msal-node": "^2.16.1",
     "@types/node": "^18.0.0",
-    "@vitest/browser": "^(node:57503) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n2.1.5\n",
-    "@vitest/coverage-istanbul": "^(node:57519) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n2.1.5\n",
+    "@vitest/browser": "^2.1.5",
+    "@vitest/coverage-istanbul": "^2.1.5",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "inherits": "^2.0.3",
-    "playwright": "^(node:57535) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n1.48.2\n",
-    "process": "^0.11.10",
+    "playwright": "^1.48.2",
     "typescript": "~5.6.2",
-    "vitest": "^(node:57550) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n2.1.5\n"
+    "vitest": "^2.1.5"
   },
   "type": "module",
   "tshy": {
@@ -140,5 +137,26 @@
     ],
     "selfLink": false
   },
-  "browser": "./dist/browser/index.js"
+  "browser": "./dist/browser/index.js",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  }
 }
