Add lock file for generate-doc tool
A recent package update broke the tool so we are adding
a lock file to ensure we have a reliable execution.

--- a/eng/pipelines/templates/steps/generate-doc.yml
+++ b/eng/pipelines/templates/steps/generate-doc.yml
@@ -3,7 +3,7 @@ parameters:
 
 steps:
   - script: |
-      npm install
+      npm ci
     workingDirectory: $(System.DefaultWorkingDirectory)/eng/tools/generate-doc
     displayName: "Install tool dependencies"
 
