--- a/sdk/healthinsights/health-insights-radiologyinsights-rest/package.json
+++ b/sdk/healthinsights/health-insights-radiologyinsights-rest/package.json
@@ -23,7 +23,7 @@
   "files": [
     "dist/",
     "dist-esm/src/",
-    "types/health-insights-radiologyinsights-rest.d.ts",
+    "types/*",
     "README.md",
     "LICENSE",
     "review/*"
