--- a/sdk/synapse/synapse-artifacts/tsconfig.json
+++ b/sdk/synapse/synapse-artifacts/tsconfig.json
@@ -1,23 +1,13 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
+    "paths": {
+      "@azure/synapse-artifacts": ["./src/index.js"]
+    },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.mts",
-    "src/**/*.cts",
-    "samples-dev/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "types",
-    "temp",
-    "browser",
-    "dist*",
-    "./dom-shims.d.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"],
+  "exclude": ["node_modules", "types", "temp", "browser", "dist*", "./dom-shims.d.ts"]
 }
