--- a/sdk/synapse/synapse-access-control-rest/tsconfig.json
+++ b/sdk/synapse/synapse-access-control-rest/tsconfig.json
@@ -1,18 +1,21 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
     "paths": {
       "@azure-rest/synapse-access-control": [
         "./src/index"
       ]
-    }
+    },
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
   "include": [
     "src/**/*.ts",
-    "test/**/*.ts",
-    "samples-dev/**/*.ts"
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts"
   ],
   "exclude": [
     "node_modules",
