--- a/sdk/synapse/synapse-access-control-rest/tsconfig.json
+++ b/sdk/synapse/synapse-access-control-rest/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/synapse-access-control": [
-        "./src/index"
-      ]
+      "@azure-rest/synapse-access-control": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
@@ -15,14 +13,8 @@
     "src/**/*.mts",
     "src/**/*.cts",
     "samples-dev/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "types",
-    "temp",
-    "browser",
-    "dist*",
-    "./dom-shims.d.ts"
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
   ]
 }
