--- a/eng/common/pipelines/templates/steps/verify-changelogs.yml
+++ b/eng/common/pipelines/templates/steps/verify-changelogs.yml
@@ -10,7 +10,7 @@ steps:
     inputs:
       filePath: $(Build.SourcesDirectory)/eng/common/scripts/Verify-ChangeLogs.ps1
       arguments: >
-        -PackagePropertiesFolder '${{ parameters.PackagePropertiesFolder }}'
+        -PackagePropertiesFolder ""
       pwsh: true
     displayName: Verify ChangeLogEntries
     condition: ${{ parameters.Condition }}
