--- a/eng/common/pipelines/templates/steps/verify-changelogs.yml
+++ b/eng/common/pipelines/templates/steps/verify-changelogs.yml
@@ -6,11 +6,6 @@ parameters:
   default: succeeded()
 
 steps:
-  - task: Powershell@2
-    inputs:
-      filePath: $(Build.SourcesDirectory)/eng/common/scripts/Verify-ChangeLogs.ps1
-      arguments: >
-        -PackagePropertiesFolder ""
-      pwsh: true
-    displayName: Verify ChangeLogEntries
-    condition: ${{ parameters.Condition }}
+  - pwsh: |
+      write-host "temp removal"
+    displayName: Verify ChangelogEntry
